--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,3 +7,9 @@
   gap: 30px;
   margin: 50px auto 0 auto;
 }
+.App {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 16px;
+  padding-bottom: 24px;
+}
